apps/kargo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
  namespace: kargo
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "kargo.int.kyledev.co"
  rules:
    - backendRefs:
        - name: kargo-api
          port: 80
